# match_three

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  init_android.bat  init_windows.bat  init_xcode.sh
assets/: config.yaml
platform/ios/: Info.plist  LaunchScreen.storyboard
scripts/: make_sdl2_ttf_xcframework.sh  make_sdl2_xcframework.sh
src/: animation.cpp  animation.h  board.cpp  board.h  config.cpp  config.h  game.cpp  game.h  input.cpp  input.h  main.cpp  renderer.cpp  renderer.h  types.h  visuals.cpp  visuals.h
